Correct some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,6 @@ input,
   width: 100%;
   padding: 15px;
   border-radius: 10px;
-  max-width: 600px;
   transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
 }
 
